Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-1483

java compiler does not generate type parameters for services in extended clauses

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.8
    • 0.9
    • Java - Compiler
    • None
    • any, (generti unix)

    • Patch Available

    Description

      When we extends one service from another, i.e.

      service Firts
      {
      }

      servive Second extend First
      {
      }

      than generated java code for service is not compiled, becouse in definition of Second.Processor<I> we use First.Processor in extends clause without type parameter

      Attachments

        1. thrift-java-2012_01_03.diff
          262 kB
          Ruslan Shevchenko
        2. thrift-java-2012_01_03.diff
          0.6 kB
          Ruslan Shevchenko

        Activity

          People

            rssh Ruslan Shevchenko
            rssh Ruslan Shevchenko
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: