THRIFT-1483. java: java compiler does not generate type parameters for services in extended clauses

Patch: Ruslan Shevchenko

git-svn-id: https://svn.apache.org/repos/asf/thrift/trunk@1226889 13f79535-47bb-0310-9956-ffa450edef68